objects/Sales_VOC_Response__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added lookup for Account to display VOC survey on Account&apos;s related list</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sales_VOC_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SOA_VOC_Survey_Responses_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lookup for Opportunity object for which the survey is targeted.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>SOA_VOC_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will hold the Opportunity Owner Id and will get displayed on &quot;Related List&quot; for this object</description>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_VOC_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_10__c</fullName>
        <description>The field for storing Question 10 text</description>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <description>The field for storing Question 1 text</description>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <description>The field for storing Question 2 text</description>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Long_Text_1__c</fullName>
        <description>The field for storing Question Long Text 1</description>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Long_Text_2__c</fullName>
        <description>The field for storing Question Long Text 2</description>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Long_Text_3__c</fullName>
        <description>The field for storing Question Long Text 3</description>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_10__c</fullName>
        <description>The field for storing Response 10 text</description>
        <label>Response</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_1__c</fullName>
        <description>The field for storing Response 1 text</description>
        <label>Response</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_2__c</fullName>
        <description>The field for storing Response 2 text</description>
        <label>Response</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Long_Text_1__c</fullName>
        <description>The field for storing Response Long Text 1</description>
        <label>Response</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Long_Text_2__c</fullName>
        <description>The field for storing Response Long Text 2</description>
        <label>Response</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Long_Text_3__c</fullName>
        <description>The field for storing Response Long Text 3</description>
        <label>Response</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Received_Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>This will store the date on which survey response received.</description>
        <label>Survey Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_Date__c</fullName>
        <description>This will store the date of Survey Trigger.</description>
        <label>Survey Sent Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>